force-app/main/default/objects/XactlyExpress__XCAtomCriteria__c/fields/XactlyExpress__AttributeID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__AttributeID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AttributeID</label>
    <referenceTo>XactlyExpress__XCDealAttribute__c</referenceTo>
    <relationshipLabel>XCAtomCriterias</relationshipLabel>
    <relationshipName>XCAtomCriterias</relationshipName>
    <type>Lookup</type>
</CustomField>