force-app/main/default/objects/XactlyExpress__XCAtomCriteria__c/fields/XactlyExpress__BooleanValue__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__BooleanValue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BooleanValue</label>
    <type>Checkbox</type>
</CustomField>