force-app/main/default/objects/XactlyExpress__XCAtomCriteria__c/fields/XactlyExpress__DateValue__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__DateValue__c</fullName>
    <label>DateValue</label>
    <type>Date</type>
</CustomField>