force-app/main/default/objects/XactlyExpress__XCAtomCriteria__c/fields/XactlyExpress__DecimalValue__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__DecimalValue__c</fullName>
    <label>DecimalValue</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>