force-app/main/default/objects/XactlyExpress__XCAtomCriteria__c/fields/XactlyExpress__Index__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Index__c</fullName>
    <label>Index</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>