force-app/main/default/objects/XactlyExpress__XCAtomCriteria__c/fields/XactlyExpress__SystemFunction__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__SystemFunction__c</fullName>
    <label>SystemFunction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>