force-app/main/default/objects/XactlyExpress__XCAtomCriteria__c/fields/XactlyExpress__SystemFunctionType__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__SystemFunctionType__c</fullName>
    <label>SystemFunctionType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>