force-app/main/default/objects/XactlyExpress__XCAtomCriteria__c/validationRules/XactlyExpress__Attribute_Not_Null2.validationRule-meta.xml
<ValidationRule>
    <fullName>XactlyExpress__Attribute_Not_Null2</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL(XactlyExpress__AttributeID__c)</errorConditionFormula>
    <errorDisplayField>XactlyExpress__AttributeID__c</errorDisplayField>
    <errorMessage>Specify an attribute</errorMessage>
</ValidationRule>